--- a/QLQuanAn/QLQuanAn/QuanLyQuanAn/QuanLyQuanAn/View/Main.storyboard
+++ b/QLQuanAn/QLQuanAn/QuanLyQuanAn/QuanLyQuanAn/View/Main.storyboard
@@ -448,7 +448,7 @@
         <!--Region-->
         <scene sceneID="M7r-aH-Rkd">
             <objects>
-                <viewController title="Region" id="d41-M2-bCL" sceneMemberID="viewController">
+                <viewController title="Region" id="d41-M2-bCL" customClass="Region_ViewController" customModule="QuanLyQuanAn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="G5Y-eg-K2b"/>
                         <viewControllerLayoutGuide type="bottom" id="JsV-xD-y1y"/>
@@ -458,27 +458,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XfK-Ca-uBd">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OLq-7U-JLn">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="160" height="160"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="92w-sh-CfK">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customcell" id="u9k-GA-vKs" customClass="MyCustom_CollectionViewCell" customModule="QuanLyQuanAn" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="160" height="160"/>
+                                        <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AYg-6S-RyA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="69"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bee-tP-M7p">
+                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="120" id="Mcy-Cv-SAZ"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tên khu vực" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTu-s5-a7Z">
-                                                    <rect key="frame" x="7.5" y="69" width="104" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCs-dC-PZ0">
+                                                    <rect key="frame" x="59" y="131" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -486,26 +489,26 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="MTu-s5-a7Z" firstAttribute="centerX" secondItem="AYg-6S-RyA" secondAttribute="centerX" id="0Rw-40-tCS"/>
-                                            <constraint firstItem="MTu-s5-a7Z" firstAttribute="top" secondItem="AYg-6S-RyA" secondAttribute="bottom" id="Efd-YE-zPj"/>
-                                            <constraint firstItem="AYg-6S-RyA" firstAttribute="top" secondItem="92w-sh-CfK" secondAttribute="top" id="eP9-rM-8SB"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="MTu-s5-a7Z" secondAttribute="bottom" constant="2" id="i3A-lt-H0g"/>
-                                            <constraint firstItem="MTu-s5-a7Z" firstAttribute="leading" secondItem="92w-sh-CfK" secondAttribute="leadingMargin" id="lM9-vM-lZ3"/>
-                                            <constraint firstAttribute="trailing" secondItem="AYg-6S-RyA" secondAttribute="trailing" id="ldd-9h-Tj2"/>
-                                            <constraint firstItem="AYg-6S-RyA" firstAttribute="leading" secondItem="92w-sh-CfK" secondAttribute="leading" id="opH-ge-DHD"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="MTu-s5-a7Z" secondAttribute="trailing" id="pXd-eR-uJd"/>
+                                            <constraint firstItem="JCs-dC-PZ0" firstAttribute="centerX" secondItem="u9k-GA-vKs" secondAttribute="centerX" id="03U-0c-qCm"/>
+                                            <constraint firstItem="bee-tP-M7p" firstAttribute="leading" secondItem="u9k-GA-vKs" secondAttribute="leading" id="Y0d-Ql-ubw"/>
+                                            <constraint firstAttribute="trailing" secondItem="bee-tP-M7p" secondAttribute="trailing" id="ZF3-FH-KzK"/>
+                                            <constraint firstAttribute="bottom" secondItem="JCs-dC-PZ0" secondAttribute="bottom" constant="8" id="bLM-CM-RsV"/>
+                                            <constraint firstItem="bee-tP-M7p" firstAttribute="top" secondItem="u9k-GA-vKs" secondAttribute="top" id="kIb-Vg-Rx3"/>
                                         </constraints>
-                                        <size key="customSize" width="120" height="100"/>
+                                        <connections>
+                                            <outlet property="image_region" destination="bee-tP-M7p" id="aFv-n1-zNF"/>
+                                            <outlet property="label_nameregion" destination="JCs-dC-PZ0" id="Y6V-1D-uvs"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="JsV-xD-y1y" firstAttribute="top" secondItem="XfK-Ca-uBd" secondAttribute="bottom" id="FuD-bK-8iy"/>
-                            <constraint firstAttribute="trailing" secondItem="XfK-Ca-uBd" secondAttribute="trailing" id="Pw2-U2-yGw"/>
-                            <constraint firstItem="XfK-Ca-uBd" firstAttribute="leading" secondItem="Xd0-5N-Nvf" secondAttribute="leading" id="U7L-Pj-Wff"/>
-                            <constraint firstItem="XfK-Ca-uBd" firstAttribute="top" secondItem="G5Y-eg-K2b" secondAttribute="bottom" id="mhR-KB-XYY"/>
+                            <constraint firstItem="JsV-xD-y1y" firstAttribute="top" secondItem="XfK-Ca-uBd" secondAttribute="bottom" id="RFE-Dg-6Fm"/>
+                            <constraint firstAttribute="trailing" secondItem="XfK-Ca-uBd" secondAttribute="trailing" id="Rs8-aN-WBF"/>
+                            <constraint firstItem="XfK-Ca-uBd" firstAttribute="top" secondItem="Xd0-5N-Nvf" secondAttribute="top" id="U4f-gY-8xL"/>
+                            <constraint firstItem="XfK-Ca-uBd" firstAttribute="leading" secondItem="Xd0-5N-Nvf" secondAttribute="leading" id="sST-28-EUh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Khu vực" id="uvV-44-3sq">
@@ -516,15 +519,18 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Sửa" id="Tzk-KO-8KP"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="collectionview" destination="XfK-Ca-uBd" id="xOW-4S-qGb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YIB-n3-D9X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2436" y="-36.431784107946029"/>
         </scene>
-        <!--Add New Region-->
+        <!--Thêm Khu Vực-->
         <scene sceneID="vLc-xw-ebm">
             <objects>
-                <viewController title="Add New Region" id="0F8-eB-X3s" sceneMemberID="viewController">
+                <viewController title="Thêm Khu Vực" id="0F8-eB-X3s" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ZNE-qR-lrJ"/>
                         <viewControllerLayoutGuide type="bottom" id="yTM-yR-CAZ"/>
@@ -542,7 +548,7 @@
         <!--Edit Region-->
         <scene sceneID="XFy-Xo-EJY">
             <objects>
-                <viewController title="Edit Region" id="Jc0-3f-3pj" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="editregion" title="Edit Region" id="Jc0-3f-3pj" customClass="EditRegion_ViewController" customModule="QuanLyQuanAn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Sb9-bC-vdy"/>
                         <viewControllerLayoutGuide type="bottom" id="MsD-m9-wb7"/>
@@ -550,8 +556,55 @@
                     <view key="view" contentMode="scaleToFill" id="LLz-OM-ZoI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1U-TZ-vjO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Sửa Khu Vực" id="L6v-jD-q7Y">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt;Trở về" id="VFh-wT-T5O">
+                                            <connections>
+                                                <segue destination="d41-M2-bCL" kind="show" identifier="editregion_back" id="WHc-A3-Zhy"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Lưu" id="jSR-dL-j9e">
+                                            <connections>
+                                                <action selector="saveClick:" destination="Jc0-3f-3pj" id="RB5-Kd-sIw"/>
+                                                <segue destination="d41-M2-bCL" kind="show" identifier="editregion_save" id="EbR-la-CZ4"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VJw-FH-sUh">
+                                <rect key="frame" x="67.5" y="94" width="240" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="bYX-hc-10i"/>
+                                    <constraint firstAttribute="width" constant="240" id="r7s-df-XcI"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sjy-1K-kzE">
+                                <rect key="frame" x="67.5" y="270" width="240" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sjy-1K-kzE" firstAttribute="width" secondItem="VJw-FH-sUh" secondAttribute="width" id="4Ql-ig-KMQ"/>
+                            <constraint firstItem="VJw-FH-sUh" firstAttribute="centerX" secondItem="LLz-OM-ZoI" secondAttribute="centerX" id="LWL-qa-oI2"/>
+                            <constraint firstItem="VJw-FH-sUh" firstAttribute="top" secondItem="i1U-TZ-vjO" secondAttribute="bottom" constant="30" id="MWe-Ff-iSM"/>
+                            <constraint firstItem="i1U-TZ-vjO" firstAttribute="top" secondItem="Sb9-bC-vdy" secondAttribute="bottom" id="UmX-ul-bLM"/>
+                            <constraint firstItem="sjy-1K-kzE" firstAttribute="centerX" secondItem="LLz-OM-ZoI" secondAttribute="centerX" id="e4l-mR-DaY"/>
+                            <constraint firstItem="sjy-1K-kzE" firstAttribute="top" secondItem="VJw-FH-sUh" secondAttribute="bottom" constant="16" id="eGe-um-bVi"/>
+                            <constraint firstItem="i1U-TZ-vjO" firstAttribute="leading" secondItem="LLz-OM-ZoI" secondAttribute="leading" id="kbu-sj-ZQ4"/>
+                            <constraint firstAttribute="trailing" secondItem="i1U-TZ-vjO" secondAttribute="trailing" id="rki-vJ-JpF"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="image" destination="VJw-FH-sUh" id="Rgp-RT-AAT"/>
+                        <outlet property="txt_nameregion" destination="sjy-1K-kzE" id="85o-u6-SrY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bm5-5U-r6J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -834,7 +887,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qfh-RW-74H" id="HgI-me-5hp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mg8-ZO-oDZ">
@@ -1006,6 +1059,7 @@
         <image name="Table Filled-50-Silver" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="EbR-la-CZ4"/>
         <segue reference="hEF-Xr-hhA"/>
     </inferredMetricsTieBreakers>
 </document>
